
add_custom_command (
  OUTPUT  VVideoGeneratorPipeline.cpp
          VVideoGeneratorPipeline.h
          VVideoGeneratorPipeline__Syms.cpp
          VVideoGeneratorPipeline__Syms.h
          VVideoGeneratorPipeline__Trace.cpp
          VVideoGeneratorPipeline__Trace__Slow.cpp
  DEPENDS VideoGeneratorPipeline.v
          ${PROJECT_SOURCE_DIR}/memory/fifo/sync/src/SyncFifo.v
          ${PROJECT_SOURCE_DIR}/memory/fifo/async/src/AsyncFifo.v
          ${PROJECT_SOURCE_DIR}/counter/gray/src/GrayCounter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/cropping/src/VideoCroppingFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/padding/src/VideoPaddingFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/binning/src/VideoBinningFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/integerscale/src/VideoIntegerScale.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/vstretch/src/VideoVerticalStretch.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/hstretch/src/VideoHorizontalStretch.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/source/generator/src/VideoGeneratorSource.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/aggregate/scaler/src/VideoAggregateScaler.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/sink/timing/src/VideoTimingSink.v
          ${PROJECT_SOURCE_DIR}/video/timing/src/VideoFormatTiming.v
          
  COMMAND perl ${VERILATOR} ${VERILATOR_OPTS} -Mdir ${CMAKE_CURRENT_BINARY_DIR} -cc
          ${CMAKE_CURRENT_SOURCE_DIR}/VideoGeneratorPipeline.v
          ${PROJECT_SOURCE_DIR}/memory/fifo/sync/src/SyncFifo.v
          ${PROJECT_SOURCE_DIR}/memory/fifo/async/src/AsyncFifo.v
          ${PROJECT_SOURCE_DIR}/counter/gray/src/GrayCounter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/cropping/src/VideoCroppingFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/padding/src/VideoPaddingFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/binning/src/VideoBinningFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/integerscale/src/VideoIntegerScale.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/vstretch/src/VideoVerticalStretch.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/hstretch/src/VideoHorizontalStretch.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/source/generator/src/VideoGeneratorSource.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/aggregate/scaler/src/VideoAggregateScaler.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/sink/timing/src/VideoTimingSink.v
          ${PROJECT_SOURCE_DIR}/video/timing/src/VideoFormatTiming.v
)


add_library (VVideoGeneratorPipeline STATIC
    VVideoGeneratorPipeline.cpp
    VVideoGeneratorPipeline__Syms.cpp
    VVideoGeneratorPipeline__Trace.cpp
    VVideoGeneratorPipeline__Trace__Slow.cpp
    # Verilog .v files are added here so that they get added to any IDE project generated by CMake.
    VideoGeneratorPipeline.v
    ${PROJECT_SOURCE_DIR}/memory/fifo/sync/src/SyncFifo.v
    ${PROJECT_SOURCE_DIR}/memory/fifo/async/src/AsyncFifo.v
    ${PROJECT_SOURCE_DIR}/counter/gray/src/GrayCounter.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/cropping/src/VideoCroppingFilter.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/padding/src/VideoPaddingFilter.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/binning/src/VideoBinningFilter.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/integerscale/src/VideoIntegerScale.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/vstretch/src/VideoVerticalStretch.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/hstretch/src/VideoHorizontalStretch.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/source/generator/src/VideoGeneratorSource.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/aggregate/scaler/src/VideoAggregateScaler.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/sink/timing/src/VideoTimingSink.v
    ${PROJECT_SOURCE_DIR}/video/timing/src/VideoFormatTiming.v
)

target_compile_options(VVideoGeneratorPipeline PRIVATE ${VK_CPPFLAGS})

target_include_directories(VVideoGeneratorPipeline PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

target_link_libraries(VVideoGeneratorPipeline verilated)
