
add_custom_command (
  OUTPUT  VVideoAggregateScaler.cpp
          VVideoAggregateScaler.h
          VVideoAggregateScaler__Syms.cpp
          VVideoAggregateScaler__Syms.h
          VVideoAggregateScaler__Trace.cpp
          VVideoAggregateScaler__Trace__Slow.cpp
  DEPENDS VideoAggregateScaler.v
          ${PROJECT_SOURCE_DIR}/memory/fifo/sync/src/SyncFifo.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/cropping/src/VideoCroppingFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/padding/src/VideoPaddingFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/binning/src/VideoBinningFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/integerscale/src/VideoIntegerScale.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/vstretch/src/VideoVerticalStretch.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/hstretch/src/VideoHorizontalStretch.v
          
  COMMAND perl ${VERILATOR} ${VERILATOR_OPTS} -Mdir ${CMAKE_CURRENT_BINARY_DIR} -cc
          ${CMAKE_CURRENT_SOURCE_DIR}/VideoAggregateScaler.v
          ${PROJECT_SOURCE_DIR}/memory/fifo/sync/src/SyncFifo.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/cropping/src/VideoCroppingFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/padding/src/VideoPaddingFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/binning/src/VideoBinningFilter.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/integerscale/src/VideoIntegerScale.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/vstretch/src/VideoVerticalStretch.v
          ${PROJECT_SOURCE_DIR}/video/pipeline/filter/hstretch/src/VideoHorizontalStretch.v
)


add_library (VVideoAggregateScaler STATIC
    VVideoAggregateScaler.cpp
    VVideoAggregateScaler__Syms.cpp
    VVideoAggregateScaler__Trace.cpp
    VVideoAggregateScaler__Trace__Slow.cpp
    # Verilog .v files are added here so that they get added to any IDE project generated by CMake.
    VideoAggregateScaler.v
    ${PROJECT_SOURCE_DIR}/memory/fifo/sync/src/SyncFifo.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/cropping/src/VideoCroppingFilter.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/padding/src/VideoPaddingFilter.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/binning/src/VideoBinningFilter.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/integerscale/src/VideoIntegerScale.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/vstretch/src/VideoVerticalStretch.v
    ${PROJECT_SOURCE_DIR}/video/pipeline/filter/hstretch/src/VideoHorizontalStretch.v
)

target_compile_options(VVideoAggregateScaler PRIVATE ${VK_CPPFLAGS})

target_include_directories(VVideoAggregateScaler PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

target_link_libraries(VVideoAggregateScaler verilated)
